Fixed errors on restart server, UI is visible.

--- a/databasyrepo/databasyrepo/static/src/css/application.css
+++ b/databasyrepo/databasyrepo/static/src/css/application.css
@@ -1,5 +1,4 @@
-#busy
-{
+#busy {
     position: fixed;
     left: 50%;
     top: 35%;
